styling fixes for readability and screen size

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 html, body {
     margin: 0;
     padding: 0;
@@ -11,6 +13,7 @@ body {
     width: 100%;
     text-align: center;
     padding-bottom: 50px;
+    font-family: "Merriweather Sans", sans-serif;
 }
 .parent_container h1 {
     color: white;
