--- a/src/components/Booking.css
+++ b/src/components/Booking.css
@@ -11,7 +11,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    width: 30%;
+    width: 40%;
     min-width: 300px;
     margin: 0 auto;
     background-color: #23282c;
@@ -44,7 +44,7 @@ form div {
     padding: 5px;
     font: 16px;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     border-radius: 10px;
 }
 #i_mess {
@@ -58,6 +58,11 @@ form div {
     max-height: 200px;
     border-radius: 10px;
     background-color: #37434d;
+    color: white;
+    padding: 5px;
+    font: 16px;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 #send_email {
     height: 5vh;
