--- a/src/components/Homebody.css
+++ b/src/components/Homebody.css
@@ -1,20 +1,17 @@
-.parent-div {
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+.parent_container {
     display: flex;
-    width: 100%;
+    /* width: 100%; */
     flex-direction: column;
     align-items: center;
-    position:absolute;
-    top: 10vh;
+
 }
-.parent-div button {
-    width: 200px;
-    height: 80px;
-    position: absolute;
-    top: 70vh;
-}
+
 .BandPhoto {
     width: 100%;
-    height: 100vh; 
+    height: 40vw; 
     background-image: url(./Images/DeasGuyzBandphoto.jpg);
     background-repeat: no-repeat;
     background-size: cover; 
@@ -25,17 +22,17 @@
 #bandDescription {
     border-bottom: solid white 5px;
     color: white;
-    font-size: 20px;
+    font-size: 16px;
     width: 75vw;
+    margin-top: 30px;
     text-align: center;
-    padding-top: 100PX;
 }
 .about-the-band {
     margin: 10vh;
     color: white;
     width: 80vw;
     padding: 20px;
-    font-size: 1.5em;
+    font-size: 30px;
     border-radius: 10px;
 }
 p {
@@ -44,22 +41,57 @@ p {
     line-height: 2em;
     padding-bottom: 1em;
 }
+.about-the-band p {
+    text-align: left;
+}
 .about-the-band h1 {
     justify-content: center;
     text-align: center;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 2vw;
 }
+#band_name {
+    color: white;
+    font-size: 3vw;
+    position: absolute;
+    background-color: rgba(35, 40, 44, 0.6);
+    top: 20vw;
+    border-radius: 50%;
+    height:400px;
+    width: 400px;
+    line-height: 400px;
 
+}
 .testimonial  {
     color: white;
-    width: 80vw;
+    max-width: 80%;
     text-align: center;
-    margin-top: 30px;
     border-radius: 20px;
     padding-left: 30px;
     padding-right: 30px;
-    margin-top: 100px;
-    box-shadow: 0px 0px 30px 10px rgb(215, 82, 1, 50%);
+    box-shadow: 5px 5px 0px 3px rgba(74, 73, 80, 0.600);
+    background-color: rgba(35, 40, 44, 0.6);
+    font-size: 30px;
+    height: 300px;
+    margin-top: 50px;
+
 }
-.hello {
-    font-size: 2em;
+.hello p {
+    display: flex;
+    align-items: center;
+    height: 300px;
+}
+@media (max-width: 900px) {
+    .BandPhoto {
+        background-size: cover;
+        width: 100%;
+    }
+    .testimonial {
+        font-size: 16px;
+        width: 70%;
+    }
+    .about-the-band p {
+        font-size: 16px;
+    }
 }
