--- a/src/components/SongList.css
+++ b/src/components/SongList.css
@@ -68,7 +68,7 @@
     transition: .5s;
 }
 .songlist_container section h1 {
-    font-size: 30;
+    font-size: 60px;
     margin-top: 10px;
 }
 
@@ -96,7 +96,7 @@
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
 }
-@media (max-width: 768px) { 
+@media (max-width: 900px) { 
     .songlist_container { 
         grid-template-columns: 1fr; 
         grid-template-areas: 
@@ -108,6 +108,9 @@
         "fats"; 
     } 
     .songlist_container li {
-         width: 100%; 
+        font-size: 16px;
+    }
+    .songlist_container section h1 {
+        font-size: 50px;
     }
 }
